Bug 538717 - Update to the correct javadoc for OSGi R7
Change-Id: Ie8ca87567c2347a832cdd928435dbb54b752ef38
Signed-off-by: Thomas Watson <tjwatson@us.ibm.com>